--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "ngx-pug-builders:browser",
           "options": {
             "outputPath": "dist/ngx-pug-builders-karma-issue",
             "index": "src/index.html",
@@ -65,7 +65,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "ngx-pug-builders:dev-server",
           "configurations": {
             "production": {
               "browserTarget": "ngx-pug-builders-karma-issue:build:production"
@@ -83,7 +83,7 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "ngx-pug-builders:karma",
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
